--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/personal-website" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://retardedtofu.github.io/personal-website/" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:title
 
 # Social Media Info
