Fixed blog navigation issue

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ stroke_in_url: "/assets/social_media/stroke_in.svg"
 
 # Pagination Details
 paginate: 4
-paginate_path: "/blog/page:num/"
+paginate_path: "/page:num/"
 
 # Build Settings
 sass:
